frontend/depolyment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-frontend
  namespace: chat
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-frontend
  template:
    metadata:
      labels:
        app: chat-frontend
    spec:
      containers:
        - name: chat-frontend
          image: ghcr.io/anish13kumar/chat-application/chatapp-frontend:latest
          ports:
            - containerPort: 80
